:wrench: chore(1.0): 更新jdk版本为11
更新jdk版本为11

Signed-off-by: Tony Deng <wolf.deng@gmail.com>